--- a/FoodfyProject/src/app/views/admin/chefs/chef.njk
+++ b/FoodfyProject/src/app/views/admin/chefs/chef.njk
@@ -1,4 +1,5 @@
 {% extends 'model.njk' %}
+{% from 'admin/recipes/loadRecipes.njk' import loadRecipes %}
 
 {% block head %}
     <title>Chef {{chef.name}}</title>
@@ -23,8 +24,7 @@
     </div>
     <section id="box">
         <h3>Receitas</h3>
-        {% from 'admin/recipes/loadRecipes.njk' import loadRecipes %}
-        {{loadRecipes(recipes, files)}}
+        {{loadRecipes(recipes, files, '/admin/recipes/')}}
         {% if recipes == '' %}
             <h3>Não possui</h3>
         {% endif %}
