--- a/FoodfyProject/src/app/views/session/forgot-password.njk
+++ b/FoodfyProject/src/app/views/session/forgot-password.njk
@@ -1,4 +1,5 @@
 {% extends "./model-session.njk" %}
+{% import "parts/users-fields.njk" as users %}
 
 {% block header %}
 <div class="forgot-context">
@@ -11,7 +12,9 @@
     <form method="POST" action="/users/forgot-password" onsubmit="Validate.isInvalid(event)">
         
         <div class="fields">
-            {% include 'session/fields-forgot.njk' %}
+            {% call users.render(user, error, 'Email para recuperar sua senha', '') %}
+
+            {% endcall %}
         </div>
 
         <div class="footer">
